Commit for planId: 107